2006-03-03 Lluis Sanchez Gual  <lluis@novell.com>    

	* MonoDevelop.Ide.Gui.Pads.ClassPad/ClassNodeBuilder.cs: Wrap
	  inner classes with a ClassData object when adding them to the
	  tree. Fixes bug #77695.

2006-03-02 Lluis Sanchez Gual  <lluis@novell.com>    

	* MonoDevelop.Ide.Gui/IViewContent.cs:
	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide.Gui/AbstractViewContent.cs:
	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs:
	* MonoDevelop.Ide.Gui.Dialogs/DirtyFilesDialog.cs: 
	Removed HasProject property from IViewContent.

2006-03-02 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Ide.Templates/ProjectDescriptor.cs:
	* MonoDevelop.Ide.Templates/FileTemplate.cs: Added
	  directory parameter to AddToProject.

	* MonoDevelop.Ide.Templates/FileDescriptionTemplate.cs:
	  Same as previous. Also added Show method.
	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs:
	  Create the file in the correct directory. Implemented Show ().

2006-02-28  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 

	* MonoDevelop.Ide.Gui.Dialogs/CommonAboutDialog.cs: Updated
	authors.

2006-02-28  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 

	* MonoDevelop.Ide.Gui.Pads/OpenTaskView.cs: Fixed update
	of buttons.

2006-02-28  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Fixed plural
	issues.

2006-02-24 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Ide.Templates/FileTemplate.cs: Changed
	  the extensio model for file templates. Now all work
	  is done by FileDescriptionTemplate.
	* MonoDevelop.Ide.Templates/FileDescriptionTemplate.cs:
	  this is now a base class for different types of file
	  templates. It has several overridable methods for
	  generating file content.
	* MonoDevelop.Ide.Templates/ProjectDescriptor.cs:
	  Most of the funcionality of creating and adding files
	  to the project has been moved to FileDescriptionTemplate.