@@ -1,3 +1,8 @@
+2006-03-03  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 
+
+	* MonoDevelop.Ide.Gui.Pads/FileScout.cs: Added fix for
+	bug 77600. Thanks to Levi Bard.
+
 2006-03-03 Lluis Sanchez Gual  <lluis@novell.com>    
 
 	* MonoDevelop.Ide.Gui.Pads.ClassPad/ClassNodeBuilder.cs: Wrap
